@@ -1149,6 +1149,9 @@ $this->toolbars['mail'] = array(
     
         if (isset($GLOBALS['innowork-tickets']['newticketid'])) {
             $eventData['id'] = $GLOBALS['innowork-tickets']['newticketid'];
+            $newTicket = true;
+        } else {
+            $newTicket = false;
         }
     
         $innowork_ticket = new InnoworkTicket(
@@ -1221,19 +1224,29 @@ $this->toolbars['mail'] = array(
         }
     
         $statuses = InnoworkTicketField::getFields(InnoworkTicketField::TYPE_STATUS);
-        $statuses['0'] = $this->localeCatalog->getStr('nostatus.label');
+        if (($newTicket = false and $ticket_data['statusid'] == 0) or !count($statuses)) {
+            $statuses['0'] = $this->localeCatalog->getStr('nostatus.label');
+        }
     
         $priorities = InnoworkTicketField::getFields(InnoworkTicketField::TYPE_PRIORITY);
-        $priorities['0'] = $this->localeCatalog->getStr('nopriority.label');
+        if (($newTicket = false and $ticket_data['priorityid'] == 0) or !count($priorities)) {
+            $priorities['0'] = $this->localeCatalog->getStr('nopriority.label');
+        }
     
         $sources = InnoworkTicketField::getFields(InnoworkTicketField::TYPE_SOURCE);
-        $sources['0'] = $this->localeCatalog->getStr('nosource.label');
+        if (($newTicket = false and $ticket_data['sourceid'] == 0) or !count($sources)) {
+            $sources['0'] = $this->localeCatalog->getStr('nosource.label');
+        }
     
         $channels = InnoworkTicketField::getFields(InnoworkTicketField::TYPE_CHANNEL);
-        $channels['0'] = $this->localeCatalog->getStr('nochannel.label');
+        if (($newTicket = false and $ticket_data['channelid'] == 0) or !count($channels)) {
+            $channels['0'] = $this->localeCatalog->getStr('nochannel.label');
+        }
     
         $types = InnoworkTicketField::getFields(InnoworkTicketField::TYPE_TYPE);
-        $types['0'] = $this->localeCatalog->getStr('notype.label');
+        if (($newTicket = false and $ticket_data['typeid'] == 0) or !count($types)) {
+            $types['0'] = $this->localeCatalog->getStr('notype.label');
+        }
     
         if ($ticket_data['done'] == \Innomatic\Core\InnomaticContainer::instance('\Innomatic\Core\InnomaticContainer')->getCurrentDomain()->getDataAccess()->fmttrue) {
             $done_icon = 'misc3';
